[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blank-repo-for-testing"
version = "0.1.0"
description = "A simple Python project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
